force-app/main/default/objects/IMESC_Case_Deletion_Config__c/IMESC_Case_Deletion_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Days and recordtypes are configured from this list custom settings and used in DeleteImeScCasesAndRelatedLst batch class</description>
    <label>IMESC Case Deletion Config</label>
</CustomObject>