force-app/main/default/objects/IMESC_Case_Deletion_Config__c/fields/Ageing_Days__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Days__c</fullName>
    <label>Ageing Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>