force-app/main/default/objects/IMESC_Case_Deletion_Config__c/fields/Send_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_To__c</fullName>
    <label>Send Email To</label>
    <type>TextArea</type>
</CustomField>